增加文件服务